@@ -148,6 +148,10 @@ Library
   up in the child process to prevent deadlock and report proper thread counts
   if the new process uses the threading module.
 
+- Issue #3309: Fix bz2.BZFile iterator to release its internal lock
+  properly when raising an exception due to the bz2file being closed.
+  Prevents a deadlock.
+
 
 Extension Modules
 -----------------
